--- a/Readme
+++ b/Readme
@@ -1,1 +1,2 @@
 Cross-factory Polarizer Sheet Surface Defect Inspection System Based on Multi-Teacher Knowledge Amalgamation
+source code and Polarizer dataset
